# cookiecutter-django-drf

./: CLAUDE.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  Procfile  Procfile.dev  README.md  docker-compose.yml  entrypoint.sh  mise.toml  pyproject.toml
{{cookiecutter.project_slug}}/common/: utils.py
{{cookiecutter.project_slug}}/config/: urls.py
{{cookiecutter.project_slug}}/config/settings/: base.py
{{cookiecutter.project_slug}}/config/settings/common/: internationalization.py  logging.py  security.py
{{cookiecutter.project_slug}}/config/settings/vendors/: __init__.py  cors.py  rest_framework.py  sentry.py  simple_jwt.py
{{cookiecutter.project_slug}}/env/: _template.env  build.env  local.tmpl.env  staging.env
{{cookiecutter.project_slug}}/requirements/: base.txt  local.txt
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/apps/authx/: apps.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/apps/users/: admin.py  apps.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/common/: exception_handler.py  filters.py  health.py  pagination.py  throttling.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/common/exceptions/: handler.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/tests/: conftest.py
