[project]
name = "{{cookiecutter.project_slug}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.description}}"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django==6.0.3",
    "django-admin-extended",
    "django-cors-headers==4.9.0",
    "django-debug-toolbar==6.3.0",
    "django-environ==0.13.0",
    "django-extensions==4.1",
    "django-filter==25.2",
    "django-model-utils==5.0.0",
    "djangorestframework==3.17.1",
    "djangorestframework-simplejwt==5.5.1",
    "drf-spectacular==0.29.0",
    "gunicorn==25.3.0",
    "honcho==2.0.0",
    "redis==7.4.0",
    "requests==2.33.1",
    "tzdata==2026.1",
    {%- if cookiecutter.use_whitenoise == "y" %}
    "whitenoise==6.12.0",
    {%- endif %}
    {%- if cookiecutter.use_postgres == "y" %}
    "psycopg[binary]",
    {%- endif %}
    {%- if cookiecutter.use_dramatiq == "y" %}
    "dramatiq==2.1.0",
    "django-dramatiq",
    {%- endif %}
]

[dependency-groups]
dev = [
    "faker==40.12.0",
    "ipython==9.12.0",
    "pytest-django==4.12.0",
    "pytest-xdist==3.8.0",
    "ruff==0.11.8",
]

[tool.ruff]
line-length = 120
exclude = [
    "migrations",
    ".venv",
    "build",
    "dist",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["{{cookiecutter.project_slug}}", "common", "config"]

[tool.uv.sources]
{%- if cookiecutter.use_dramatiq == "y" %}
django-dramatiq = { git = "https://github.com/cuongnbms/django_dramatiq", rev = "v1.1.3" }
{%- endif %}
django-admin-extended = { git = "https://github.com/cuongnbms/django-admin-extended.git", rev = "v5.1.6" }
